[tool.poetry]
name = "server-health-check"
version = "0.1.0"
description = "A tool to monitor and fix common issues with aaPanel and MySQL binary logs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "server_health_check"}]

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^3.3.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server-health-check = "server_health_check.main:main"
